----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-05-29 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_change.php: bug #1184325, Label IDs mismatch for ENUM type,
      thanks to Ryan Schmidt
    * footer.inc.php: bug #1209891, db list not refreshed when the left
      frame is positionned on a db, then a manual DROP DATABASE it done
      on another db
    * db_operations.php, footer.inc.php: bug #1170227, copying a db does not 
      refresh the queryframe
 
2005-05-27 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties.inc.php: bug #1205940, current timestamp checkbox 
      when field type changes

2005-05-26 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_create.php: bug #1207406, undefined index from PMA_setComment()
    * sql.php: bug #1204913, left frame update on manual table rename

2005-05-25 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties.inc.php: bug #1207404, undefined variables

2005-05-24 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1207395, undefined theme_generation
      and theme_version, thanks to Ryan Schmidt
    * tbl_properties_operations.php: bug #1207212, changing table type
      under MySQL 5.0.4

2005-05-22 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/charset_conversion.lib.php: diacritics wrongly converted 
      in Browse mode under MySQL 4.1.x if AllowAnywhereRecoding set to TRUE
    * tbl_properties_structure.php, tbl_properties.inc.php,
      libraries/sqlparser.lib.php: bug #1163595, NULL detection of TIMESTAMP
    * many files: bug #1193250, XHTML compliance, thanks to Ryan Schmidt
    * themes/[darkblue_orange|original]/css/theme_print.css.php:
      spelling error Hevetica -> Helvetica, thanks to Castorius and
      Isaac Bennetch - ibennetch

2005-05-19 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_select.php: bug #1204235, searching on a VARBINARY field
