@@ -631,9 +631,9 @@ if ($num_tables > 0) {
     <?php
 } // end if
 ?>
-<table border="0" cellpadding="2" cellspacing="0">
     <!-- Create a new table -->
-        <form method="post" action="tbl_create.php" onsubmit="return (emptyFormElements(this, 'table') && checkFormElementInRange(this, 'num_fields', 1))">
+<form method="post" action="tbl_create.php" onsubmit="return (emptyFormElements(this, 'table') && checkFormElementInRange(this, 'num_fields', 1))">
+     <table border="0" cellpadding="2" cellspacing="0">
      <tr>
      <td class="tblHeaders" colspan="3" nowrap="nowrap"><?php
         echo PMA_generate_common_hidden_inputs($db);
@@ -660,7 +660,8 @@ echo '     </td>';
 echo '     <td align="right">';
 echo '             ' . '&nbsp;<input type="submit" value="' . $strGo . '" />' . "\n";
 echo '     </td> </tr>';
-echo '        </form>';
+echo '     </table>';
+echo '</form>';
 
 /**
  * Displays the footer
